--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
       <button class="btn btn-default">Default</button>
       <button class="btn btn-primary btn-sm">Default</button>
       <button class="btn btn-default btn-xs" disabled="disabled">Default</button>
+      <!--BUTTON WITH GLYPH -->
+      <button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-tag"></span> Button</button>
     </div>
 
     <hr>
@@ -422,6 +424,49 @@
           <h3>Box</h3>
         </div>
       </div>
+    </div>
+
+    <!--Page navigation -->
+    <div class="container">
+        <nav aria-label="Page navigation">
+          <ul class="pagination">
+            <li>
+              <a href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+
+            <li>
+              <a href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+    </div>
+    <!-- Pager -->
+    <div class="container">
+        <nav aria-label="...">
+          <ul class="pager">
+            <li><a href="#">Previous</a></li>
+            <li><a href="#">Next</a></li>
+          </ul>
+        </nav>
+    </div>
+
+    <!-- ALIGNED LINKS -->
+    <div class="container">
+        <nav aria-label="...">
+          <ul class="pager">
+            <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Older</a></li>
+            <li class="next"><a href="#">Newer <span aria-hidden="true">&rarr;</span></a></li>
+          </ul>
+        </nav>
     </div>
 
     <div style="height:400px"></div>
